correção no css

--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
         <div id="tittle-footer">
             <h3>saiba mais</h3>
         </div>
-        <div id="box-paragraph">
+        <div id="footer-link">
             <a>Sobre a Empresa</a>
             <a>Perguntas Frequentes</a>
             <a>Vagas abertas</a>
